--- a/Exercícios/ex022/fundo006.html
+++ b/Exercícios/ex022/fundo006.html
@@ -11,7 +11,7 @@
             background-color:black;
             background-image: url(imagens/wallpaper002.jpg);
             background-position: center top;
-            background-repeat: no-repeat;
+            background-repeat: repeat;
             background-size: cover;
 
         }
@@ -31,6 +31,24 @@
     <main>
         <h1>Teste de imagem de fundo</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, mollitia! Reprehenderit hic expedita aliquam error distinctio. Esse magni aliquam debitis quod error dolor dignissimos quasi reprehenderit impedit, perferendis commodi excepturi?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, mollitia! Reprehenderit hic expedita aliquam error distinctio. Esse magni aliquam debitis quod error dolor dignissimos quasi reprehenderit impedit, perferendis commodi excepturi?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, mollitia! Reprehenderit hic expedita aliquam error distinctio. Esse magni aliquam debitis quod error dolor dignissimos quasi reprehenderit impedit, perferendis commodi excepturi?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, mollitia! Reprehenderit hic expedita aliquam error distinctio. Esse magni aliquam debitis quod error dolor dignissimos quasi reprehenderit impedit, perferendis commodi excepturi?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, mollitia! Reprehenderit hic expedita aliquam error distinctio. Esse magni aliquam debitis quod error dolor dignissimos quasi reprehenderit impedit, perferendis commodi excepturi?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, mollitia! Reprehenderit hic expedita aliquam error distinctio. Esse magni aliquam debitis quod error dolor dignissimos quasi reprehenderit impedit, perferendis commodi excepturi?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, mollitia! Reprehenderit hic expedita aliquam error distinctio. Esse magni aliquam debitis quod error dolor dignissimos quasi reprehenderit impedit, perferendis commodi excepturi?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, mollitia! Reprehenderit hic expedita aliquam error distinctio. Esse magni aliquam debitis quod error dolor dignissimos quasi reprehenderit impedit, perferendis commodi excepturi?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, mollitia! Reprehenderit hic expedita aliquam error distinctio. Esse magni aliquam debitis quod error dolor dignissimos quasi reprehenderit impedit, perferendis commodi excepturi?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, mollitia! Reprehenderit hic expedita aliquam error distinctio. Esse magni aliquam debitis quod error dolor dignissimos quasi reprehenderit impedit, perferendis commodi excepturi?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, mollitia! Reprehenderit hic expedita aliquam error distinctio. Esse magni aliquam debitis quod error dolor dignissimos quasi reprehenderit impedit, perferendis commodi excepturi?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, mollitia! Reprehenderit hic expedita aliquam error distinctio. Esse magni aliquam debitis quod error dolor dignissimos quasi reprehenderit impedit, perferendis commodi excepturi?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, mollitia! Reprehenderit hic expedita aliquam error distinctio. Esse magni aliquam debitis quod error dolor dignissimos quasi reprehenderit impedit, perferendis commodi excepturi?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, mollitia! Reprehenderit hic expedita aliquam error distinctio. Esse magni aliquam debitis quod error dolor dignissimos quasi reprehenderit impedit, perferendis commodi excepturi?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, mollitia! Reprehenderit hic expedita aliquam error distinctio. Esse magni aliquam debitis quod error dolor dignissimos quasi reprehenderit impedit, perferendis commodi excepturi?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, mollitia! Reprehenderit hic expedita aliquam error distinctio. Esse magni aliquam debitis quod error dolor dignissimos quasi reprehenderit impedit, perferendis commodi excepturi?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, mollitia! Reprehenderit hic expedita aliquam error distinctio. Esse magni aliquam debitis quod error dolor dignissimos quasi reprehenderit impedit, perferendis commodi excepturi?</p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, mollitia! Reprehenderit hic expedita aliquam error distinctio. Esse magni aliquam debitis quod error dolor dignissimos quasi reprehenderit impedit, perferendis commodi excepturi?</p>
+
     </main>
 </body>
 </html>
