--- a/Exercícios/ex022/fundo006.html
+++ b/Exercícios/ex022/fundo006.html
@@ -24,6 +24,7 @@
             border-radius: 15px;
 
         }
+        
     </style>
 </head>
 <body>
@@ -48,6 +49,7 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, mollitia! Reprehenderit hic expedita aliquam error distinctio. Esse magni aliquam debitis quod error dolor dignissimos quasi reprehenderit impedit, perferendis commodi excepturi?</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, mollitia! Reprehenderit hic expedita aliquam error distinctio. Esse magni aliquam debitis quod error dolor dignissimos quasi reprehenderit impedit, perferendis commodi excepturi?</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati, mollitia! Reprehenderit hic expedita aliquam error distinctio. Esse magni aliquam debitis quod error dolor dignissimos quasi reprehenderit impedit, perferendis commodi excepturi?</p>
+        <a href="" target="_blank"></a>
 
     </main>
 </body>
