--- a/Pratica_Max/ebook_lucas/index.html
+++ b/Pratica_Max/ebook_lucas/index.html
@@ -10,7 +10,7 @@
        body{
             height: 100vh;
             background-color:black;
-            background-image: url(imagens/wallpaper002.jpg);
+            background-image: url("fotos lucas/IMG-20211109-WA0052.jpg");
             background-position: center top;
             background-repeat: repeat;
             background-size: cover;
@@ -33,7 +33,7 @@
         <p>Lucas, hoje começa nossa aventura!
             vou te contar uma história muito legal, sobre um menino que conseguiu fazer uma coisa muito importante, amanha começamos nossa aventura ok? boa noite e bons sonhos
         </p>
-        <img src="fotos lucas/IMG-20211109-WA0052.jpg" alt="">
+        
         
     </main>
 </body>
