--- a/Pratica_Max/ebook_lucas/index.html
+++ b/Pratica_Max/ebook_lucas/index.html
@@ -10,8 +10,8 @@
        body{
             height: 100vh;
             background-color:black;
-            background-image: url("fotos lucas/IMG-20211109-WA0052.jpg");
-            background-position: center top;
+            background-image: url(fotos\ lucas/IMG_20220516_195330.jpg);
+            background-position: center center;
             background-repeat: repeat;
             background-size: cover;
 
@@ -19,19 +19,21 @@
         main{
             background-color: white;
             width: 400px;
-            padding: 10px;
+            padding: 15px;
             margin: auto;
-            border: 2px solid darkblue;
+            border: 6px solid darkblue;
             border-radius: 15px;
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 22px;
 
         }
     </style>
 </head>
 <body>
     <main>
-        <h1> A criança que pode fazer</h1>
+        <h1> "A criança que pode fazer"</h1>
         <p>Lucas, hoje começa nossa aventura!
-            vou te contar uma história muito legal, sobre um menino que conseguiu fazer uma coisa muito importante, amanha começamos nossa aventura ok? boa noite e bons sonhos
+            Sou seu anjo da guarda e vou te contar uma história muito legal, sobre um menino que conseguiu fazer uma coisa muito importante, amanha começamos nossa aventura ok? boa noite e bons sonhos.
         </p>
         
         
