--- a/Pratica_Max/ebook_lucas/index.html
+++ b/Pratica_Max/ebook_lucas/index.html
@@ -45,8 +45,12 @@
 <body>
     <main>
         <h1> "A criança que pode fazer"</h1>
-        <p>Lucas, hoje começa nossa aventura!
-            Sou seu anjo da guarda e vou te contar uma história muito legal, sobre um menino que conseguiu fazer uma coisa muito importante, amanha começamos nossa aventura ok? boa noite e bons sonhos.
+        <p>1º- Dois amigos patinavam sobre um lago gelado quando, de repente, o gelo se rompeu e um deles caiu na água. A corrente interna o levou uns metros para debaixo da parte gelada. A única maneira de salvá-lo seria quebrar a capa de gelo que o cobria.
+         <p>Seu amigo começou a gritar pedindo ajuda, mas, ao ver que ninguém ouvia, buscou rapidamente uma pedra e começou a bater no gelo com toda sua força.
+         </p>   
+         <p>
+            continua amanhã!
+         </p>
            <img src="fotos lucas/anjo - Copia.png" alt="">
         </p>
         
