--- a/Exercícios/ex024/iframe.html
+++ b/Exercícios/ex024/iframe.html
@@ -6,11 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudos Iframe</title>
     <style>
-body>p>iframe{
-    width: 900px;
-    height: 500px;
+        body{
+            text-align: center;
+            border: 1px solid black;
+            border-radius: 5px;
+            background-color: rgba(187, 181, 181, 0.445);
+
+        }
+        body>p>iframe{
+            width: 300px;
+            height: 150px;
+            border: 1px solid black;
     
-}
+        }
+        h1{
+            border: 1px solid black;
+        }
 
     </style>
 </head>
@@ -18,5 +29,6 @@ body>p>iframe{
     <h1>Testando o uso de um iframe</h1>
     <p>Acessando o site do <a href="https://cursoemvideo.com" target="_blank">Cursoemvideo</a> para aprender a programar</p>
     <p>Acessando o site do <iframe src="https://cursoemvideo.com" frameborder="0"></iframe> para aprender a programar</p>
+    <p>O site do <iframe src="htttp://www.google.com.br" frameborder="0"></iframe> Pena que não funciona</p>
 </body>
 </html>
